--- a/notebooks/split_data.ipynb
+++ b/notebooks/split_data.ipynb
@@ -1286,7 +1286,7 @@
    "hash": "1d8865b9aa9df0ad48dc25ad7251b3456278617eeb2c8317fd9471c54886e835"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
