--- a/notebooks/split_data.ipynb
+++ b/notebooks/split_data.ipynb
@@ -1131,6 +1131,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dac82176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = training1level.movieid.unique()\n",
+    "testset1l = testset1l[testset1l.movieid.isin(items)]\n",
+    "users_test = testset1l.userid.unique()\n",
+    "holdout1l = holdout1l[holdout1l.userid.isin(users_test)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "id": "6fa598ad",
    "metadata": {
