Finish first version of all pipeline (#4)
* ease model

* add models

* add IALS

* new notes

* model

* finish TensorModel

* final non debag pipeline

* finish work with first version

* some check with model

Co-authored-by: Конюшенко Юлия Николаевна <y.konyushenko@tinkoff.ru>
Co-authored-by: a.bredikhin <a.bredikhin@macbook-a.bredikhin>

--- a/notebooks/split_data.ipynb
+++ b/notebooks/split_data.ipynb
@@ -1131,6 +1131,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "dac82176",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = training1level.movieid.unique()\n",
+    "testset1l = testset1l[testset1l.movieid.isin(items)]\n",
+    "users_test = testset1l.userid.unique()\n",
+    "holdout1l = holdout1l[holdout1l.userid.isin(users_test)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "id": "6fa598ad",
    "metadata": {
@@ -1286,7 +1299,7 @@
    "hash": "1d8865b9aa9df0ad48dc25ad7251b3456278617eeb2c8317fd9471c54886e835"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('.venv': poetry)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
